some warnings fix